--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -24,10 +24,15 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:support-v13:23.1.1'
+
+    final SUPPORT_LIBRARY_VERSION = '23.1.1'
+
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:support-v13:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
